--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.3",
     "lorem-ipsum": "^2.0.8",
     "no-profanity": "^1.5.1",
+    "oxford-dictionary": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
